# edd

./: .gitignore  Entorno de trabajo - Setup.md  LICENSE  Makefile  Notas y pruebas de clase.ipynb  README.md  requirements.txt
Clase 1/: Intro Python.ipynb  Presentacion.ipynb
Clase 1 - Introducción a Python/: Introducción a Python.ipynb  Presentacion.ipynb  rise.css
Clase 2 - Introducción a Python/: rise.css
Clase 5 - Grafos/: Anexo figuras.ipynb  Clase 1 - Grafos.ipynb  Clase 5 - Grafos.ipynb
Clases/: Notas para el setup en MacOS.md  Notas y pruebas en clase.ipynb  README.md
Clases/Clase 01 - Introducción a Python/: Apéndice.ipynb  Introducción a Python.ipynb
Clases/Clase 02 - Introducción a Python/: Introducción a Python.ipynb
Clases/Clase 05 - Grafos y Orden topológico/: Grafos y Orden topológico.ipynb  plan-2019.csv
Clases/Clase 06 - Camino mínimo en grafos dirigidos/: Camino mínimo en grafos dirigidos.ipynb
Clases/Clase 07 - Recorridos de grafos/: Recorridos en grafos.ipynb
Clases/Clase 08 - XML y XPath/: geografia.xml
Clases/Clase 1 - Introducción a Python/: Apéndice.ipynb  (+2 more)
code/: README.md  pyproject.toml
code/edd/cola/: __init__.py  cola.py
code/edd/coladeprioridad/: __init__.py  cola_de_prioridad.py
code/edd/grafo/: __init__.py  grafo.py
code/edd/jp/: __init__.py  jp.py
code/edd/pila/: __init__.py  pila.py
code/tests/cola/: test_cola.py
code/tests/coladeprioridad/: test_cola.py
code/tests/grafo/: test_grafo.py
code/tests/pila/: test_cola.py
docs/: Configuración del entorno de trabajo.md  Notas para el setup en MacOS.md
(+37 files in other folders)
