[tool.poetry]
name = "edd"
version = "0.1.0"
description = ""
authors = ["Santiago Rojo <tiagox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "*"
networkx = "*"

[tool.poetry.scripts]
test = "scripts:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
